--- a/yolo/mnist_yolo.yaml
+++ b/yolo/mnist_yolo.yaml
@@ -1,5 +1,6 @@
-train: yolo/data/MNIST/raw
-val: mnist_yolo/val/images
+path: /path/to/mnist_yolo  # dataset root dir
+train: train/images  # train images (relative to 'path')
+val: val/images  # val images (relative to 'path')
 
-nc: 10
-names: ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']
+nc: 10  # number of classes
+names: ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']  # class names
